add product model to the backend

--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-mongo_URI = 
+mongo_URI = mongodb+srv://abdullahakinkunmi26:jYS9DdI8kuW1NK3X@cluster0.wwx0hak.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
