--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 mongo_URI = mongodb+srv://abdullahakinkunmi26:jYS9DdI8kuW1NK3X@cluster0.wwx0hak.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+jwt_secret = yuwhjjegejkwhewkeh wuuyewkkw
+jwt_expires = 50d
