do verify email in backend

--- a/.env
+++ b/.env
@@ -2,3 +2,8 @@ mongo_URI = mongodb+srv://abdullahakinkunmi26:jYS9DdI8kuW1NK3X@cluster0.wwx0hak.
 
 jwt_secret = yuwhjjegejkwhewkeh wuuyewkkw
 jwt_expires = 50d
+
+nodemailer_pass = jesg djcv dnjq vqmb
+
+nodemailer_email = sheriffabdullah200@gmail.com
+client_domain = "http://localhost:5173"
